--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
+  <title>Blog Luis Romero</title>
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="assets/css/utilities.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
 <body>
   <!-- =========== HEADER ========== -->
   <header class="header container-fluid">
-    <h1 class="text-center">Mi Blog</h1>
+    <h1 class="text-center">Mi Blog I'm Luis Romero</h1>
     <p class="text-center">lo último del mundo tech</p>
   </header>
   <!-- =========== CARDS FEATURES ========== -->
